--- a/src/app/consulta-empenho/consulta-empenho.component.css
+++ b/src/app/consulta-empenho/consulta-empenho.component.css
@@ -24,3 +24,15 @@
 .alignRight{
 	float: right;
 }
+
+.form-control-inline {
+	min-width: 0;
+    width: auto;
+    display: inline;
+}
+
+.borda-gay {
+	border: 2px;
+	border-radius: 5px;
+	border-color: black;
+}
