--- a/src/app/consulta-empenho/consulta-empenho.component.html
+++ b/src/app/consulta-empenho/consulta-empenho.component.html
@@ -5,24 +5,23 @@
 <div class="container">
 <!-- Início Empenho Form -->
 
-  <div class="container">
-  <div class="panel panel-primary">
-  <div class="panel-heading"> Novo Empenho </div>
   
-  <div class="panel-body">
-  
-  <div class="form-group col-sm-10">
+  <collapsible-panel title="Novo Empenho" visible="true">
+  <div class="form-group col-sm-6">
     <label for="unidadeEmp">Unidade Gestora:</label>
-    <input class="form-control" 
+  
+  
+    <input class="form-control form-control-inline" 
       type="text"  
       id="unidadeEmp" 
       placeholder="Unidade Gestora" 
-      formControlName="unidade_gestora">
+      formControlName="unidade_gestora" >
   </div>
    
-  <div class="form-group col-sm-10">
-    <label for="gestaoEmp">Gestão:</label>
-       <input class="form-control" 
+  <div class="form-group col-sm-6">
+    <label for="unidadeEmp">Gestão:</label>
+  
+       <input class="form-control form-control-inline" 
         type="text"  
         id="gestaoEmp" 
         placeholder="Gestão" 
@@ -30,9 +29,9 @@
   </div>
 
 
-<div class="form-group col-sm-10">
+<div class="form-group col-sm-6 ">
       <label for="eventoEmp">Evento:</label>
-         <input class="form-control" 
+         <input class="form-control form-control-inline" 
           type="text"  
           id="eventoEmp" 
           placeholder="Evento" 
@@ -40,28 +39,24 @@
   </div>
 
 
-  <div class="form-group col-md-4 afastaPraBaixo">
-      <ul class="btn-group" id="modalidadeEmp">
-      <li>
+  <div class="form-group col-sm-12 afastaPraBaixo borda-gay" id="modalidadeEmp">
+      
       <label for="modalidadeEmp"> Modalidade:
       </label>
-      </li>   
-      <li>
-         <label >
-              <input type="radio" id="q128" name="quality[21]" value="ordinario" checked="checked"/> Ordinário
+        
+      
+         <label>
+              <input type="radio" id="q128" name="quality[21]" value="ordinario" checked="checked" /> Ordinário
           </label>
-      </li>
-      <li> 
+      
           <label >
               <input type="radio" id="q129" name="quality[21]"  value="global" /> Global
           </label>
-      </li>
-      <li>
+      
           <label >
               <input type="radio" id="q130" name="quality[21]" value="estimativo" /> Estimativo
           </label>
-      </li>  
-        </ul>
+      
 
 <!-- MENU MODALIDADE -->
 <!-- <div class="form-group col-sm-10">
@@ -77,53 +72,41 @@
         </select>
     </div>  -->
 
-  </div>
-      <ul class="form-group col-md-4 afastaPraBaixo">
-      <div class="btn-group" id="tipoEmp">
-          <li>
-            <label for="tipoEmp"> Tipo:
-            </label>
-          </li>
-          <li>
-            <label>
-              <input type="radio" id="q131" name="quality[22]" value="repasse" checked="checked"/> Repasse
-            </label>
-          </li> 
-          <li>
-            <label>
-              <input type="radio" id="q132" name="quality[22]"  value="suplimento" /> Suplimento
-            </label>
-          </li>
-          <li> 
-            <label>
-              <input type="radio" id="q133" name="quality[22]" value="subvencao social" /> Subvenção Social
-            </label>
-          </li>
-          <li>
-            <label>
-              <input type="radio" id="q133" name="quality[22]" value="normal" /> Normal
-            </label> 
-          </li> 
-      </div>
-    </ul>
-</div>
+    </div>
+      
+    <div class="form-group col-sm-12 afastaPraBaixo" id="tipoEmp">
+        
+          <label for="tipoEmp"> Tipo:
+          </label>
+        
+        
+          <label>
+            <input type="radio" id="q131" name="quality[22]" value="repasse" checked="checked"/> Repasse
+          </label>
+       
+        
+          <label>
+            <input type="radio" id="q132" name="quality[22]"  value="suplimento" /> Suplimento
+          </label>
+        
+        
+          <label>
+            <input type="radio" id="q133" name="quality[22]" value="subvencao social" /> Subvenção Social
+          </label>
+        
+          <label>
+            <input type="radio" id="q133" name="quality[22]" value="normal" /> Normal
+          </label> 
+        
+    </div>
+  </collapsible-panel>
 
 
-</div>
-</div> <!-- fim do container -->  
-<!-- Fim Empenho form -->
 
-
-  <wizard-step title="Passo 1" navigationSymbol="1">
+<wizard-step title="Passo 1" navigationSymbol="1">
 
 <!-- Início Empenho>Credor form -->
-  <div class="container">
-  <div class="panel panel-primary">
-  <div class="panel-heading">Credor</div>
-  <div class="panel-body"> 
-
-  
-
+  <collapsible-panel title="Credor">
     
     <div formGroupName="credor"> 
 
@@ -194,18 +177,14 @@
           </div>
         </div>
     </div> <!-- credor -->
-  </div>
-  </div> <!-- panel panel-primary -->
-  </div> <!-- FIM DO CONTAINER CREDOR -->
+  </collapsible-panel>
       
       <!-- Fim Empenho>Credor Form -->
 
       <!-- Início Empenho>Orçamentário Form -->
-    <div class="container">
-    <div class="panel panel-primary">
-    <div class="panel-heading">Orçamentário</div>
-    <div class="panel-body" formGroupName="orcamentario"> 
-      
+   
+      <collapsible-panel title="Orçamentário">
+       <div formGroupName="orcamentario"> 
         <div class="form-group col-sm-10">
           <label for="ptResumidoOrc"> PT Resumido:
           </label>
@@ -328,12 +307,11 @@
         <div class="form-group col-sm-10">
           <button class="btn btn-default">Verificar Disponibilidade</button>
         </div>
-      </div> <!-- panel-body -->
-      </div> <!-- panel panel-primary -->
-      </div> <!-- FIM DO CONTAINER CREDOR -->
-       
+      </div> <!-- Fim FormGroup Orçamentario -->
+    </collapsible-panel>
+   
 
-      <!-- Fim Empenho>Orçamentário Form -->
+      
 
   
     <br>
