--- a/src/app/consulta-empenho/consulta-empenho.component.html
+++ b/src/app/consulta-empenho/consulta-empenho.component.html
@@ -7,7 +7,6 @@
 <div class="container">
 <!-- Início Empenho Form -->
 
-  
   <collapsible-panel title="Novo Empenho" visible="true">
     <div class="row">
       <div class="col-sm-12">
@@ -121,7 +120,7 @@
 <!-- Início Empenho>Credor form -->
   <collapsible-panel title="Credor">
     
-    <div formGroupName="credor"> 
+    <div class="container" formGroupName="credor"> 
 
         <div class="form-group col-sm-2">
 
@@ -196,19 +195,19 @@
 
       <!-- Início Empenho>Orçamentário Form -->
    
-  <collapsible-panel title="Orçamentário">
-    <div formGroupName="orcamentario">
+  <collapsible-panel title="Orçamentário" >
+    <div class="container" formGroupName="orcamentario">
       <div class="row">
         <div class="col-sm-8">
           <div class="col-sm-6">
             <div class="form-group">
               <label for="ptResumidoOrc"> PT Resumido:
               </label>
-                <input class="form-control form-control-inline" 
-                  type="text"  
-                  id="ptResumidoOrc" 
-                  placeholder="166848" 
-                  formControlName="pt_resumido">
+              <input class="form-control form-control-inline" 
+                type="text"  
+                id="ptResumidoOrc" 
+                placeholder="166848" 
+                formControlName="pt_resumido">
             </div>
           </div>
           
@@ -221,254 +220,260 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <div class="col-sm-2 col-sm-offset-1">
-            <label for="esferaOrc"> Esfera
-            </label>
-            <input type="text"  
-              id="esferaOrc" 
-              placeholder="1" 
-              formControlName="esfera">
-          </div>
-          <div class="col-sm-2">
-            <label for="programaTrabalhoOrc"> Programa de Trabalho
-            </label>
-            <input type="text"  
-              id="programaTrabalhoOrc" 
-              placeholder="1236214684800000" 
-              formControlName="programa_trabalho">
-          </div>
-          <div class="col-sm-2">
-            <label for="uoOrc"> UO
-            </label>
-            <input type="text"  
-              id="uoOrc" 
-              placeholder="16101" 
-              formControlName="uo">
-          </div>
+          <div class="form-group">
+            <div class="col-sm-2 col-sm-offset-1">
+              <label for="esferaOrc"> Esfera
+              </label>
+              <input type="text"  
+                id="esferaOrc" 
+                placeholder="1" 
+                formControlName="esfera">
+            </div>
+            <div class="col-sm-2">
+              <label for="programaTrabalhoOrc"> Programa de Trabalho
+              </label>
+              <input type="text"  
+                id="programaTrabalhoOrc" 
+                placeholder="1236214684800000" 
+                formControlName="programa_trabalho">
+            </div>
+            <div class="col-sm-2">
+              <label for="uoOrc"> UO
+              </label>
+              <input type="text"  
+                id="uoOrc" 
+                placeholder="16101" 
+                formControlName="uo">
+            </div>
 
-          <div class="col-sm-2">
-            <label for="ugResponsavelOrc"> UG Responsável
-            </label>
-            <input type="text"  
-              id="ugResponsavelOrc" 
-              placeholder="160101" 
-              formControlName="ug_responsavel">
+            <div class="col-sm-2">
+              <label for="ugResponsavelOrc"> UG Responsável
+              </label>
+              <input type="text"  
+                id="ugResponsavelOrc" 
+                placeholder="160101" 
+                formControlName="ug_responsavel">
+            </div>
           </div>
         </div>
       </div>
-      <br>
-      <div class="row">
-        <div class="col-sm-12">
-            <div class="col-sm-4">
-              <div class="form-group">
-                <label for="planoInternoOrc"> Plano interno:
-                </label>
-                  <input class="form-control form-control-inline" 
-                    type="text"  
-                    id="planoInternoOrc" 
-                    placeholder="4210008312C" 
-                    formControlName="plano_interno">
-              </div>
-            </div>
-
-            <div class="col-sm-1">
-              <div class="form-group">
-                <button class="btn btn-default">>></button>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="form-group ">
-                
-                  <input class="form-control" 
-                    type="text"  
-                    placeholder="CONCESSAO DE AUXILIO TRANSPORTE">
-              </div>
-            </div>
-          </div>
-        </div>
 
     <div class="row">
       <div class="col-sm-12">
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="planoInternoOrc"> Plano interno:
+              </label>
+                <input class="form-control form-control-inline" 
+                  type="text"  
+                  id="planoInternoOrc" 
+                  placeholder="4210008312C" 
+                  formControlName="plano_interno">
+            </div>
+          </div>
+
+          <div class="col-sm-1">
+            <div class="form-group">
+              <button class="btn btn-default">>></button>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="form-group ">
+              <input class="form-control" 
+                type="text"  
+                placeholder="CONCESSAO DE AUXILIO TRANSPORTE">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="naturezaDespesaOrc"> Natureza da Despesa:
+              </label>
+                <input class="form-control form-control-inline" 
+                  type="text"  
+                  id="naturezaDespesaOrc" 
+                  placeholder="333913900" 
+                  formControlName="natureza_despesa">
+            </div> 
+          </div>
+
+          <div class="col-sm-1">
+            <button class="btn btn-default">>></button>
+          </div>
+
+          <div class="col-sm-6">
+              <input class="form-control" 
+                type="text"  
+                placeholder="OUTROS SERV. TERC. PJ-OP.INTRA ORCAMENTARIA" >
+          </div>
+        </div>
+      </div>
+    
+
+     <div class="row">
+      <div class="col-sm-12">
         <div class="col-sm-4">
-          <label for="naturezaDespesaOrc"> Natureza da Despesa:
+          <label for="fonteRecursoOrc"> Fonte de Recurso:
           </label>
             <input class="form-control form-control-inline" 
               type="text"  
-              id="naturezaDespesaOrc" 
-              placeholder="333913900" 
-              formControlName="natureza_despesa">
+              id="fonteRecursoOrc" 
+              placeholder="0101000000" 
+              formControlName="fonte_recurso">
         </div> 
 
-        <div class="col-sm-4">
+        <div class="form-group col-sm-1">
           <button class="btn btn-default">>></button>
         </div>
 
-        <div class="col-sm-4">
+        <div class="form-group col-sm-6">
             <input class="form-control" 
               type="text"  
-              placeholder="OUTROS SERV. TERC. PJ-OP.INTRA ORCAMENTARIA" >
+              placeholder="RECURSOS PROPRIOS" >
         </div>
       </div>
     </div>
-    
-
-      <div class="form-group col-sm-10">
-        <label for="fonteRecursoOrc"> Fonte de Recurso:
-        </label>
-          <input class="form-control" 
-            type="text"  
-            id="fonteRecursoOrc" 
-            placeholder="0101000000" 
-            formControlName="fonte_recurso">
-      </div> 
-
-      <div class="form-group col-sm-10">
-        <button class="btn btn-default">>></button>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="col-sm-4 col-sm-offset-1">
+          <div class="form-group">
+            <label for="valorOrc"> Valor:
+            </label>
+              <input class="form-control form-control-inline" 
+                type="text"  
+                id="valorOrc" 
+                placeholder="1.937.286,45" 
+                formControlName="valor">
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <button class="btn btn-default">Verificar Disponibilidade</button>
+          </div>
+        </div>
       </div>
-
-      <div class="form-group col-sm-10">
-          <input class="form-control" 
-            type="text"  
-            placeholder="RECURSOS PROPRIOS" >
-      </div>
-
-      <div class="form-group col-sm-10">
-        <label for="valorOrc"> Valor:
-        </label>
-          <input class="form-control" 
-            type="text"  
-            id="valorOrc" 
-            placeholder="1.937.286,45" 
-            formControlName="valor">
-      </div> 
-      <div class="form-group col-sm-10">
-        <button class="btn btn-default">Verificar Disponibilidade</button>
-      </div>
-    </div> <!-- Fim FormGroup Orçamentario -->
+    </div>
+  </div>
   </collapsible-panel>
-   
-
-      
-
-  
-    <br>
-    <div class="form-group">
-      <div class="col-md-12l"> 
+  <div class="row">
+    <div class="col-sm-12 col-sm-offset-5"> 
+      <div class="form-group">
         <button (click)="initStep2()" [disabled]="!empenhoForm.controls['orcamentario'].valid" type="button" class="btn btn-primary" nextStep>Próximo</button>
         <!-- <button type="button" class="btn btn-warning" goToStep="2">Go directly to third Step</button> -->
       </div>
-
     </div>
-    
+  </div>
     
 
 
   </wizard-step>
   <wizard-step title="Passo 2" optionalStep >
     
-    <div class="container">
-    <div class="panel panel-primary">
-    <div class="panel-heading">Dados complementares (CONTRATUAIS, LEGAIS, ETC.) </div>
+      <collapsible-panel title="DADOS COMPLEMENTARES (CONTRATUAIS, LEGAIS, ETC.">
     
-    <div class="panel-body" formGroupName="complementar">
-      <div class="form-group col-sm-10">
-        <label for="acordoComp"> Acordo:
-        </label>
-          <input class="form-control" 
-            type="text"  
-            id="acordoComp" 
-            placeholder="acordo" 
-            formControlName="acordo">
-      </div>
-      
-      <br>
-        <div class="form-group col-sm-10">
-          <label for="licitacaoComp"> Licitação:
-          </label>
-            <select class="form-control" id="licitacaoComp" formControlName="licitacao">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
-      
+        <div class="container" formGroupName="complementar">  
+          <div class="form-group col-sm-10">
+            <label for="acordoComp"> Acordo:
+            </label>
+              <input class="form-control" 
+                type="text"  
+                id="acordoComp" 
+                placeholder="acordo" 
+                formControlName="acordo">
+          </div>
+
+            <div class="form-group col-sm-10">
+              <label for="licitacaoComp"> Licitação:
+              </label>
+                <select class="form-control" id="licitacaoComp" formControlName="licitacao">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
+          
+            </div>
+          <div class="form-group col-sm-10">
+            <label for="origemComp"> Origem Material:
+            </label>
+              <input class="form-control" 
+                type="text"  
+                id="origemComp" 
+                placeholder="Origem do Material" 
+                formControlName="origem_material">
+          </div>
+
+          <br>
+          <div class="form-group col-sm-10">
+            <label for="refLegalComp"> Referência Legal:
+            </label>
+              <input class="form-control" 
+                type="text"  
+                id="refLegalComp" 
+                placeholder="Referência Legal" 
+                formControlName="referencia_legal">
+          
+          </div>
+          <div class="form-group col-sm-10">
+            <label for="numProcComp"> Número do Processo:
+            </label>
+              <input class="form-control" 
+                type="text"  
+                id="numProcComp" 
+                placeholder="Número do Processo" 
+                formControlName="numero_processo">
+          </div>
+
+          <br>
+          <div class="form-group col-sm-10">
+            <label for="numConvenioComp"> Número Convênio:
+            </label>
+              <input class="form-control" 
+                type="text"  
+                id="numConvenioComp" 
+                placeholder="Número Convênio" 
+                formControlName="numero_convenio">
+          
+          </div>
+          <div class="form-group col-sm-10">
+            <label for="aditConvenioComp"> Aditivo Convênio:
+            </label>
+              <input class="form-control" 
+                type="text"  
+                id="aditConvenioComp" 
+                placeholder="Aditivo Convênio" 
+                formControlName="aditivo_convenio">
+          </div>
+
+          <br>
+          <div class="form-group col-sm-10">
+            <label for="numContratoComp"> Número Contrato:
+            </label>
+              <input class="form-control" 
+                type="text"  
+                id="numContratoComp" 
+                placeholder="Número Contrato" 
+                formControlName="numero_contrato">
+          
+          </div>
+          <div class="form-group col-sm-10">
+            <label for="aditContratoComp"> Aditivo Contrato:
+            </label>
+              <input class="form-control" 
+                type="text"  
+                id="aditContratoComp" 
+                placeholder="Aditivo Contrato" 
+                formControlName="aditivo_contrato">
+          </div>
+        
         </div>
-      <div class="form-group col-sm-10">
-        <label for="origemComp"> Origem Material:
-        </label>
-          <input class="form-control" 
-            type="text"  
-            id="origemComp" 
-            placeholder="Origem do Material" 
-            formControlName="origem_material">
-      </div>
-
-      <br>
-      <div class="form-group col-sm-10">
-        <label for="refLegalComp"> Referência Legal:
-        </label>
-          <input class="form-control" 
-            type="text"  
-            id="refLegalComp" 
-            placeholder="Referência Legal" 
-            formControlName="referencia_legal">
-      
-      </div>
-      <div class="form-group col-sm-10">
-        <label for="numProcComp"> Número do Processo:
-        </label>
-          <input class="form-control" 
-            type="text"  
-            id="numProcComp" 
-            placeholder="Número do Processo" 
-            formControlName="numero_processo">
-      </div>
-
-      <br>
-      <div class="form-group col-sm-10">
-        <label for="numConvenioComp"> Número Convênio:
-        </label>
-          <input class="form-control" 
-            type="text"  
-            id="numConvenioComp" 
-            placeholder="Número Convênio" 
-            formControlName="numero_convenio">
-      
-      </div>
-      <div class="form-group col-sm-10">
-        <label for="aditConvenioComp"> Aditivo Convênio:
-        </label>
-          <input class="form-control" 
-            type="text"  
-            id="aditConvenioComp" 
-            placeholder="Aditivo Convênio" 
-            formControlName="aditivo_convenio">
-      </div>
-
-      <br>
-      <div class="form-group col-sm-10">
-        <label for="numContratoComp"> Número Contrato:
-        </label>
-          <input class="form-control" 
-            type="text"  
-            id="numContratoComp" 
-            placeholder="Número Contrato" 
-            formControlName="numero_contrato">
-      
-      </div>
-      <div class="form-group col-sm-10">
-        <label for="aditContratoComp"> Aditivo Contrato:
-        </label>
-          <input class="form-control" 
-            type="text"  
-            id="aditContratoComp" 
-            placeholder="Aditivo Contrato" 
-            formControlName="aditivo_contrato">
-      </div>
-    </div>
-    </div>
-    </div>
+    </collapsible-panel>
+    
 
 
     <div class="container">
