--- a/src/app/consulta-empenho/consulta-empenho.component.css
+++ b/src/app/consulta-empenho/consulta-empenho.component.css
@@ -1,3 +1,8 @@
+input[type="radio"] {
+  margin-top: 0px;
+  vertical-align: middle;
+}
+
 .ng-valid[required], .ng-valid.required  {
   border-left: 5px solid #42A948; /* green */
 }
@@ -21,6 +26,10 @@
 
 }
 
+.alignCenter{
+	 text-align: left
+}
+
 .alignRight{
 	float: right;
 }
@@ -29,14 +38,25 @@
 	min-width: 0;
     width: auto;
     display: inline;
+
 }
 
-.borda-gay {
-	border: 2px;
-	border-radius: 5px;
-	border-color: black;
+.borda {
+    border: 1px solid lightgray;
+    border-radius: 5px;
+	overflow: hidden;
+	display: inline-block;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 5px;
+	padding-top: 5px;
 }
 
 .alinha-col {
-	margin-left: 16px;
+	margin-left: 0px;
+}
+
+.alignBottom{
+    padding-left: 5px;
+    vertical-align: bottom
 }
