--- a/src/app/consulta-empenho/consulta-empenho.component.html
+++ b/src/app/consulta-empenho/consulta-empenho.component.html
@@ -10,20 +10,7 @@
   <collapsible-panel title="Novo Empenho" visible="true">
     <div class="row">
       <div class="col-sm-12">
-        <div class="col-sm-6">
-          <div class="form-group">
-            <label for="unidadeEmp">Unidade Gestora:</label>
-          
-          
-            <input class="form-control" 
-              type="text"  
-              id="unidadeEmp" 
-              placeholder="Unidade Gestora" 
-              formControlName="unidade_gestora" >
-          </div>
-        </div>
-
-        <div class="col-sm-5 col-md-offset-1">
+        <div class="col-sm-5">
           <div class="form-group">
             <label for="unidadeEmp">Gestão:</label>
           
@@ -34,41 +21,57 @@
                 formControlName="gestao_emp">
           </div>
         </div>
+
+        <div class="col-sm-4 col-sm-offset-1">
+          <div class="form-group">
+            <label for="unidadeEmp">Unidade Gestora:</label>
+            <input class="form-control" 
+              type="text"  
+              id="unidadeEmp" 
+              placeholder="Unidade Gestora" 
+              formControlName="unidade_gestora" >
+          </div>
+        </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-sm-8 alinha-col">
-        <div class="form-group">
-            <label for="eventoEmp">Evento:</label>
-               <input class="form-control" 
-                type="text"  
-                id="eventoEmp" 
-                placeholder="Evento" 
-                formControlName="evento">
+      <div class="col-sm-5">
+        <div class="form-group alinha-col">
+          <label for="eventoEmp">Evento:</label>
+          <input class="form-control" 
+          type="text"  
+          id="eventoEmp" 
+          placeholder="Evento" 
+          formControlName="evento">
         </div>
       </div>
-    </div>  
+    </div>
 
+<div class="row">
+<div class="col-md-12">
+<div class="col-md-3">  
 
-  <div class="form-group col-sm-12 afastaPraBaixo borda-gay" id="modalidadeEmp">
-      
+  <div class="form-group" id="modalidadeEmp">
       <label for="modalidadeEmp"> Modalidade:
+      </label>      
+      <br>
+    <div class="borda">
+     <label class="radio-inline">
+          <input type="radio" id="q128" name="quality[21]" value="ordinario" checked="checked" /> Ordinário
       </label>
-        
-      
-         <label>
-              <input type="radio" id="q128" name="quality[21]" value="ordinario" checked="checked" /> Ordinário
-          </label>
-      
-          <label >
-              <input type="radio" id="q129" name="quality[21]"  value="global" /> Global
-          </label>
-      
-          <label >
-              <input type="radio" id="q130" name="quality[21]" value="estimativo" /> Estimativo
-          </label>
-      
+  
+      <label  class="radio-inline">
+          <input type="radio" id="q129" name="quality[21]"  value="global" /> Global
+      </label>
+  
+      <label  class="radio-inline">
+          <input type="radio" id="q130" name="quality[21]" value="estimativo" /> Estimativo
+      </label>
+      </div>
+
+  </div>      
+</div> <!-- borda -->
 
 <!-- MENU MODALIDADE -->
 <!-- <div class="form-group col-sm-10">
@@ -83,35 +86,35 @@
         <option>Estimativo</option>
         </select>
     </div>  -->
+ <div class="col-md-6 afastaProLado"> 
+  <div class="form-group" id="tipoEmp">
+    <label for="tipoEmp"> Tipo:
+    </label>
+    <br>   
+    <div class="borda">
+      <label class="radio-inline">
+        <input type="radio" id="q131" name="quality[22]" value="repasse" checked="checked"/> Repasse
+      </label>
+    
+      <label class="radio-inline">
+        <input type="radio" id="q132" name="quality[22]"  value="suplimento" /> Suplimento
+      </label>
+        
+      <label class="radio-inline">
+        <input type="radio" id="q133" name="quality[22]" value="subvencao social" /> Subvenção Social
+      </label>
+    
+      <label class="radio-inline">
+        <input type="radio" id="q133" name="quality[22]" value="normal" /> Normal
+      </label> 
+    </div> <!-- borda -->
 
-    </div>
-      
-    <div class="form-group col-sm-12 afastaPraBaixo" id="tipoEmp">
-        
-          <label for="tipoEmp"> Tipo:
-          </label>
-        
-        
-          <label>
-            <input type="radio" id="q131" name="quality[22]" value="repasse" checked="checked"/> Repasse
-          </label>
-       
-        
-          <label>
-            <input type="radio" id="q132" name="quality[22]"  value="suplimento" /> Suplimento
-          </label>
-        
-        
-          <label>
-            <input type="radio" id="q133" name="quality[22]" value="subvencao social" /> Subvenção Social
-          </label>
-        
-          <label>
-            <input type="radio" id="q133" name="quality[22]" value="normal" /> Normal
-          </label> 
-        
-    </div>
-  </collapsible-panel>
+  </div>
+</div>
+</div> 
+</div> <!-- row -->
+
+</collapsible-panel>
 
 
 
@@ -119,56 +122,51 @@
 
 <!-- Início Empenho>Credor form -->
   <collapsible-panel title="Credor">
-    
-    <div class="container" formGroupName="credor"> 
+  <div class="container" formGroupName="credor">
+      
+      <div class="row"> 
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label for="tipoEmp"> Tipo Identificação:
+              </label>
+          
+            <div class="borda">
+              <label class="radio-inline">
+                <input type="radio" id="q134" name="quality[23]" value="cnpj" checked="checked" /> CNPJ
+              </label> 
 
-        <div class="form-group col-sm-2">
+              <label class="radio-inline">
+                <input type="radio" id="q135" name="quality[23]"  value="cpf" /> CPF
+              </label>
 
-          <ul >
-           <div class="btn-group" id="tipoEmp">
-            <li>
-            <label for="tipoEmp"> Tipo Identificação:
-            </label>
-            </li>
-            <li>
-                <label>
-                    <input type="radio" id="q134" name="quality[23]" value="cnpj" checked="checked" /> CNPJ
-                </label> 
-            </li>
-            <li>    
-                <label>
-                    <input type="radio" id="q135" name="quality[23]"  value="cpf" /> CPF
-                </label>
-            </li>
-            <li>
-                <label>
-                    <input type="radio" id="q136" name="quality[23]" value="ug" /> UG
-                </label> 
-            </li>
-            <li>    
-                <label>
-                    <input type="radio" id="q137" name="quality[23]" value="iscricao generica" /> Inscrição Genérica
-                </label>
-            </li>
-              </div>
-        </ul>
+              <label class="radio-inline">
+                <input type="radio" id="q136" name="quality[23]" value="ug" /> UG
+              </label> 
 
+              <label class="radio-inline">
+                <input type="radio" id="q137" name="quality[23]" value="iscricao generica" /> Inscrição Genérica
+              </label>
+            </div> <!-- borda -->
+
+            </div>
+          </div> <!--col sm 4-->
+    <label for="eventoEmp">Nº de Identificação:</label>
+    <div class="form-inline">
+      <div class="input-group" id="tipoEmp">
+          <input class="form-control" 
+            type="text"  
+            id="numIdCred" 
+            placeholder="Nº de Identificação" 
+            formControlName="num_id">
+            <span class="input-group-btn">
+            <button class="btn btn-default" type="button">Buscar Credor</button>
+            </span>
       </div>
+    </div>
+    </div> <!--row-->
 
-        <div class="col-sm-10 col-md-6">
-           <input class="form-control" 
-              type="text"  
-              id="numIdCred" 
-              placeholder="Nº de Identificação" 
-              formControlName="num_id">
-
-            <button class="afastaPraBaixo btn btn-default">Buscar Credor</button>
-        </div>
-
-        <br/>
-
-        <div class="col-sm-12">
-           <div class="form-group col-sm-10">
+        <div class="row">
+           <div class="form-group col-sm-8">
             <label for="tipoEmp"> Favorecido:
             </label>
             <input class="form-control" 
@@ -177,8 +175,9 @@
               placeholder="Favorecido" 
               formControlName="favorecido">          
           </div>
-
-          <div class="form-group col-sm-10">
+        </div>
+        <div class="row">
+          <div class="form-group col-sm-8">
             <label for="tipoEmp"> Gestão:
             </label>
             <input class="form-control" 
@@ -187,7 +186,7 @@
               placeholder="Gestão" 
               formControlName="gestao_cred">
           </div>
-        </div>
+          </div>
     </div> <!-- credor -->
   </collapsible-panel>
       
@@ -218,6 +217,7 @@
           </div>
         </div>
       </div>
+      
       <div class="row">
         <div class="col-sm-12">
           <div class="form-group">
